--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -70,22 +70,22 @@ jobs:
         run: poetry install
 
       - name: Run Pytest
-        if: ! env.skip_render
+        if: ${{ !env.skip_render }}
         run: poetry run pytest --cov-report xml --cov=./src/plugins/nonebot_bison -k 'not compare and not render'
 
       - name: Run Pytest with render mark
-        if: env.skip_render
+        if: ${{ env.skip_render }}
         run: poetry run pytest --cov-report xml --cov=./src/plugins/nonebot_bison -k 'not compare'
 
       - name: Upload coverage report
-        if: ! env.skip_render
+        if: ${{ !env.skip_render }}
         uses: codecov/codecov-action@v3
         with:
           flags: smoke-test
           env_vars: OS,PYTHON_VERSION
       
       - name: Upload all-test coverage report
-        if: env.skip_render
+        if: ${{ env.skip_render }}
         uses: codecov/codecov-action@v3
         with:
           flags: all-test
