--- a/pyproject.toml
+++ b/pyproject.toml
@@ -68,8 +68,8 @@ all = ["anyio", "click", "typing-extensions", "pyyaml"]
 bison = "nonebot_bison.script.cli:main"
 
 [build-system]
-requires = ["poetry>=1.0.0"]
-build-backend = "poetry.masonry.api"
+requires = ["poetry-core>=1.0.0"]
+build-backend = "poetry.core.masonry.api"
 
 [tool.pytest.ini_options]
 markers = [
@@ -104,7 +104,7 @@ src_paths = ["nonebot_bison", "tests"]
 extra_standard_library = ["typing_extensions"]
 
 [tool.nonebot]
-plugins = ["nonebot_bison"]
+plugins = ["nonebot_bison", "extra_plugins"]
 
 [tool.pyright]
 reportShadowedImports = false
